@@ -1,3 +1,7 @@
+AP-2007-04-13-0: Bugfix:      Updating the online documentation. Adding
+                              the description of statistic tables.
+                 Bugster:     6545277
+
 RD-2007-03-14-0: CVS          Created V61beta2_TAG
 --------------------------------------------------
 
